Fix extra whitespace on the right

--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -62,6 +62,11 @@ a:active {
   max-width: 980px;
 }
 
+.row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
 .main {
   position: relative;
   min-height: 100%;
